src/styles/components/_icons.scss
.user-icon,
.rest-icon {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;

  width: 3rem;
  height: 3rem;

  border: 1px solid $color-main;
  border-radius: 50%;

  cursor: pointer;
  transition: all 0.2s;
}

.user-icon:hover {
  transform: scale(1.2);
}

.rest-icon {
  right: -1px;
  z-index: 9;


  background-color: $button-color-additional;

  color: $button-color;

  font-size: 1.4rem;
}

.user-img {
  display: flex;
  align-items: center;
  justify-content: center;

  width: 4rem;
  height: 4rem;

  background-color: $button-color-light;
  border: 1px solid $color-main;
  border-radius: 50%;
  padding: 0.3rem;

  color: $button-color;

  @include tablet {
    width: 3rem;
    height: 3rem;
  }
}

.member-icon {
  display: inline-block;

  width: 10rem;
  height: 10rem;

  border: 1px solid $color-main;
  border-radius: 50%;
  vertical-align: middle;
  padding: 3.5rem;

  text-align: center;
  font-size: 3rem;
}

